# GridRunner

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
assets/: GridRunner.icns  generate_banner.py  generate_icons.py
backend/: __init__.py  config.py  database.py  events.py  executor.py  logging_config.py  main.py  models.py  notifications.py  runtimes.py  scheduler.py
backend/api/: auth.py  cron.py  dashboard.py  environments.py  events.py  runs.py  runtimes.py  schedules.py  scripts.py  settings.py
docs/superpowers/plans/: 2026-05-07-cancel-script-run.md  2026-05-07-ui-refresh-sse.md
docs/superpowers/specs/: 2026-05-07-cancel-script-run-design.md  2026-05-07-ui-refresh-sse-design.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
tests/: conftest.py  test_api_events.py  test_api_scripts.py  test_events.py  test_executor.py  test_runtimes.py  test_scheduler.py
