[project]
name = "gridrunner"
version = "1.0.0"
description = "Manage, schedule, and monitor your scripts from a native desktop app."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "aiosmtplib>=3.0.0",
    "aiofiles>=23.0.0",
    "python-crontab>=3.0.0",
    "httpx>=0.26.0",
    "sse-starlette>=2.0.0",
    "itsdangerous>=2.1.0",
    "greenlet>=3.0.0",
    "pywebview>=5.0",
]

[project.scripts]
gridrunner = "run:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pyinstaller>=6.0.0",
]
